data/forge_javadoc/1.9.4/processed/net_minecraft_client_model_ModelBiped.md
# ModelBiped

## Class signature

```java
public class ModelBiped extends ModelBase
```

## Constructors

- `public ModelBiped()`
- `public ModelBiped(float modelSize)`
- `public ModelBiped(float modelSize, float p_i1149_2_, int textureWidthIn, int textureHeightIn)`

## Methods

- `public void render( Entity entityIn, float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scale)`
- `public void setRotationAngles(float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scaleFactor, Entity entityIn)`
- `public void setModelAttributes( ModelBase model)`
- `public void setInvisible(boolean invisible)`
- `public void postRenderArm(float scale, EnumHandSide side)`
- `protected ModelRenderer getArmForSide( EnumHandSide side)`
- `protected EnumHandSide getMainHand( Entity entityIn)`